# IN8011-WS20

./: .gitignore  README.md
slides/src/additional-exercises/: additional-exercises.md
slides/src/tutorial-01/: IN8011-T01-moritz-makowski.md
slides/src/tutorial-02/: IN8011-T02-moritz-makowski.md
slides/src/tutorial-03/: IN8011-T03-moritz-makowski.md
slides/src/tutorial-04/: IN8011-T04-moritz-makowski.md  tutorial-04.md
slides/src/tutorial-05/: IN8011-T05-moritz-makowski.md  tutorial-05.md
slides/src/tutorial-06/: IN8011-T06-moritz-makowski.md  tutorial-06.md
slides/src/tutorial-07/: IN8011-T07-moritz-makowski.md
slides/src/tutorial-08/: IN8011-T08-moritz-makowski.md
slides/src/tutorial-09/: IN8011-T09-moritz-makowski.md
slides/src/tutorial-10/: IN8011-T10-moritz-makowski.md  tutorial-11-trees-graphics.afdesign
slides/src/tutorial-11/: IN8011-T11-moritz-makowski.md
slides/src/tutorial-12/: IN8011-T12-moritz-makowski.md
tutorial-01/: CMakeLists.txt  example_01_hello_world.c  example_02_hello_math.c
tutorial-01/examples/: example_01_hello_world.c  example_02_hello_math.c
tutorial-02/: CMakeLists.txt
tutorial-02/examples/: example_2_1_boolean.c  example_2_2_overflow.c  example_2_3_integer_division.c  example_2_4_division_remainder.c
tutorial-02/exercises/: exercise_2_3_random.c  exercise_2_4_b.c  exercise_2_4_d.c  exercise_2_4_e.c  exercise_2_4_f.c  exercise_2_5_fizzbuzz.c
tutorial-03/: CMakeLists.txt
tutorial-03/examples/: example_3_1_exit_code.c  example_3_2_char_array.c  example_3_3_basic_IO_really_unsafe.c  example_3_4_basic_IO_unsafe.c  example_3_5_basic_IO_safe.c  example_3_6_atoi.c  example_3_7_for_loop.c  example_3_8_switch.c
tutorial-03/exercises/: exercise_3_1_c.c  exercise_3_2_a_v1.c  exercise_3_2_a_v2.c  exercise_3_2_b_v1.c  exercise_3_2_b_v2.c  exercise_3_2_c.c
tutorial-04/: CMakeLists.txt
tutorial-04/examples/: example_4_1_arrays.c  example_4_2_return.c  example_4_3_return_stop.c  example_4_4_global_scope.c  example_4_4_gobal_scope.c  example_4_5_a_local_scope.c  example_4_5_b_local_scope.c  example_4_6_a_local_scope.c  example_4_6_b_local_scope.c  example_4_7_bad_readability.c  example_4_8_good_readability.c
tutorial-04/exercises/: exercise_4_1_a.c  exercise_4_1_b.c  exercise_4_2_a_main.c  exercise_4_2_a_tree.c  exercise_4_2_b_main.c  exercise_4_2_b_prime.c  exercise_4_2_c_binary.c  exercise_4_2_c_main.c
tutorial-05/: CMakeLists.txt
tutorial-05/examples/: example_5_1_matrix_initialisation.c  example_5_2_diagonal_matrix.c  example_5_3_struct_array.c  example_5_4_enums.c  helpers_5_1_print_int_matrix.c
tutorial-05/exercises/: exercise_5_1_a.c  exercise_5_1_b.c  exercise_5_1_c.c  exercise_5_1_d.c  exercise_5_1_e.c  exercise_5_2_a_symmetric.c  exercise_5_2_b_skew_symmetric.c  exercise_5_2_matrix_main.c  exercise_5_3_abcd.c  exercise_5_3_efg.c  exercise_5_3_efg_advanced.c  exercise_5_3_live.c
tutorial-06/: CMakeLists.txt
tutorial-06/examples/: example_6_3_local_static.c  example_6_3_static_lifetime.c  example_6_4_static_local.c  example_6_5_static_global_a.c  example_6_5_static_global_a.h  example_6_5_static_global_b.c
tutorial-06/examples/example_6_1_shared_functions/: README.md  main.c  print_matrices.c  print_matrices.h
tutorial-06/examples/example_6_2_shared_variables/: README.md  main.c  my_vars.c  my_vars.h
tutorial-07/: CMakeLists.txt
tutorial-07/examples/: example_7_1_ho_map_function.c  example_7_2_ho_filter_function.c  example_7_3_pointer_intro.c  example_7_4_passing_by_value.c  example_7_5_passing_by_reference.c  example_7_6_array.c  example_7_7_array_index_access.c  example_7_8_array_pointer_access.c
tutorial-07/exercises/stack_boilerplate/: stack.c
tutorial-07/exercises/stack_solution/: main.c  main_correction.c  stack.c  stack.h
tutorial-08/: CMakeLists.txt
tutorial-08/examples/: example_8_1_static_vs_dynamic_allocation.c  example_8_2_dynamic_allocation_malloc.c  example_8_3_dynamic_allocation_calloc.c  example_8_4_factorial_loop.c  example_8_5_factorial_recursion.c  live_8.c
tutorial-08/exercises/: exercise_8_1_a_basic.c  exercise_8_1_b_advanced.c
tutorial-09/: CMakeLists.txt
tutorial-09/exercises/list_boilerplate/: list.c  list.h  main.c
tutorial-09/exercises/list_solution/: list.c  list.h  main.c
tutorial-10/: CMakeLists.txt
tutorial-10/exercises/boilerplate/: bfs.c  dfs.c  main.c
tutorial-10/exercises/solution/: bfs.c  dfs.c  main.c
tutorial-10/exercises/tree/: tree.c  tree.h
tutorial-11/: CMakeLists.txt
tutorial-11/exercises/: print_array.c
tutorial-11/exercises/boilerplate/: binary_search.c  bubble_sort.c  merge_sort.c
tutorial-11/exercises/solution/: binary_search.c  bubble_sort.c  merge_sort.c
